@@ -103,6 +103,7 @@
  * Restore resumable hints delivery (CASSANDRA-11960)
  * Properly report LWT contention (CASSANDRA-12626)
 Merged from 3.0:
+ * Add parent repair session id to anticompaction log message (CASSANDRA-12186)
  * Prevent reloading of logback.xml from UDF sandbox (CASSANDRA-12535)
  * Pass root cause to CorruptBlockException when uncompression failed (CASSANDRA-12889)
  * Batch with multiple conditional updates for the same partition causes AssertionError (CASSANDRA-12867)
